# bitnet-quantize

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
benches/: bitnet_ops.rs
examples/: basic.rs  quantization.rs
src/: error.rs  lib.rs
src/kernels/: cubecl.rs  mod.rs
src/layer/: bitlinear.rs  ste.rs
src/quantization/: activation.rs  mod.rs  weight.rs
