[package]
name = "bitnet-quantize"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Microsoft BitNet b1.58 quantization and inference for Rust"
repository = "https://github.com/tzervas/bitnet-quantize"
homepage = "https://github.com/tzervas/bitnet-quantize"
documentation = "https://docs.rs/bitnet-quantize"
keywords = ["bitnet", "quantization", "ternary", "llm", "inference"]
categories = ["science", "mathematics"]

[dependencies]
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Sister crate dependencies (local TLC path; version for crates.io when published)
trit-vsa = { version = "0.2.0", path = "../trit-vsa" }
peft-rs = { version = "1.0.0", optional = true }
qlora-rs = { version = "1.0.0", optional = true }

# GPU acceleration via CubeCL (optional local sister)
rust-ai-core = { path = "../rust-ai-core", optional = true }
cubecl = { version = "0.9", optional = true, default-features = false }
cubecl-cuda = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1.4"

[features]
default = []
cuda = [
    "candle-core/cuda",
    "dep:rust-ai-core",
    "dep:cubecl",
    "dep:cubecl-cuda",
    "rust-ai-core?/cuda",
]
peft = ["dep:peft-rs"]
gguf-export = ["dep:qlora-rs"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"

[[bench]]
name = "bitnet_ops"
harness = false
